Copy Jump to Date PoC changes on top of RovingTabIndex fixes
Copy changes from https://github.com/matrix-org/matrix-react-sdk/pull/7317
on top of RovingTabIndex fixes in https://github.com/matrix-org/matrix-react-sdk/pull/7336

--- a/res/css/views/messages/_DateSeparator.scss
+++ b/res/css/views/messages/_DateSeparator.scss
@@ -33,3 +33,37 @@ limitations under the License.
     margin: 0 25px;
     flex: 0 0 auto;
 }
+
+.mx_DateSeparator_jumpToDateMenu {
+    display: flex;
+}
+
+.mx_DateSeparator_chevron {
+    align-self: center;
+    width: 16px;
+    height: 16px;
+    mask-position: center;
+    mask-size: contain;
+    mask-repeat: no-repeat;
+    mask-image: url('$(res)/img/feather-customised/chevron-down.svg');
+    background-color: $tertiary-content;
+}
+
+.mx_DateSeparator_jumpToDateMenuOption > .mx_IconizedContextMenu_label {
+    flex: initial;
+    width: auto;
+}
+
+.mx_DateSeparator_datePickerForm {
+    display: flex;
+}
+
+.mx_DateSeparator_datePicker {
+    flex: initial;
+    margin: 0;
+    margin-left: 8px;
+}
+
+.mx_DateSeparator_datePickerSubmitButton {
+    margin-left: 8px;
+}
